@@ -1,5 +1,6 @@
 package crm.warehousekeeper.controller;
 
+import crm.common.URLConstants;
 import crm.common.model.Product;
 import crm.common.model.ProductSpecification;
 import crm.common.model.Specification;
@@ -7,6 +8,7 @@ import crm.common.model.Type;
 import crm.core.config.DBcontext;
 import crm.core.repository.hibernate.entitymanager.EntityManager;
 import crm.core.service.IDGeneratorService;
+import crm.core.validator.Validator;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.MultipartConfig;
 import jakarta.servlet.annotation.WebServlet;
@@ -17,12 +19,16 @@ import jakarta.servlet.http.Part;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 
-@WebServlet(urlPatterns = "/warehouse/addProduct")
-@MultipartConfig
+@WebServlet(urlPatterns = URLConstants.WAREHOUSE_ADD_PRODUCT)
+@MultipartConfig(
+        fileSizeThreshold = 1024 * 1024,  // 1MB
+        maxFileSize = 1024 * 1024 * 10,   // 10MB
+        maxRequestSize = 1024 * 1024 * 50 // 50MB
+)
 public class AddProductController extends HttpServlet {
 
     EntityManager em = new EntityManager(DBcontext.getConnection());
@@ -32,6 +38,12 @@ public class AddProductController extends HttpServlet {
 
         List<Type> types = em.findAll(Type.class);
         List<Specification> specifications = em.findAll(Specification.class);
+
+        if (types.isEmpty() || specifications.isEmpty()) {
+            req.setAttribute("errorMessage", "Please ensure that at least one product type and one specification exist before adding a product.");
+            req.getRequestDispatcher("/warehouse_keeper/add_product.jsp").forward(req, resp);
+            return;
+        }
 
         req.setAttribute("types", types);
         req.setAttribute("specifications", specifications);
@@ -44,30 +56,46 @@ public class AddProductController extends HttpServlet {
     protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
 
         try {
+            em.beginTransaction();
+
+            Product product = new Product();
+
             String productName = req.getParameter("productName");
+
+            if (!Validator.isValidName(productName)) {
+                req.setAttribute("errorMessage", "Invalid product name.");
+                doGet(req, resp);
+                return;
+            }
+
             String productDescription = req.getParameter("productDescription");
+
+            if (!Validator.isValidText(productDescription)) {
+                req.setAttribute("errorMessage", "Invalid product description.");
+                doGet(req, resp);
+                return;
+            }
+
             String typeIDStr = req.getParameter("typeID");
             int typeID = Integer.parseInt(typeIDStr);
             String[] specIDs = req.getParameterValues("specIDs");
 
             Part filePart = req.getPart("productImage");
-            String fileName = Paths.get(filePart.getSubmittedFileName()).getFileName().toString();
-            String uploadPath = getServletContext().getRealPath("") + File.separator + "assets" + File.separator + "product";
-            File uploadDir = new File(uploadPath);
-            if (!uploadDir.exists()) {
-                uploadDir.mkdirs();
+            if (filePart != null && filePart.getSubmittedFileName() != null && !filePart.getSubmittedFileName().isEmpty()) {
+                String fileName = Path.of(filePart.getSubmittedFileName()).getFileName().toString();
+
+                String uploadPath = getServletContext().getRealPath("") + File.separator + "assets";
+                File uploadDir = new File(uploadPath);
+                if (!uploadDir.exists()) uploadDir.mkdir();
+
+                String filePath = uploadPath + File.separator + fileName;
+                filePart.write(filePath);
+                product.setProductImage("../assets/" + fileName);
             }
-            filePart.write(uploadPath + File.separator + fileName);
 
-            System.out.println(uploadPath + File.separator + fileName);
-
-            String imageUrl = "assets/product/" + fileName;
-
-            Product product = new Product();
             product.setProductID(IDGeneratorService.generateID(Product.class));
             product.setProductName(productName);
             product.setProductDescription(productDescription);
-            product.setProductImage(imageUrl);
 
 
             Type productType = em.find(Type.class, typeID);
@@ -97,13 +125,18 @@ public class AddProductController extends HttpServlet {
                 em.merge(product, Product.class);
             }
 
-            resp.sendRedirect(req.getContextPath() + "/warehouse/viewInventory");
+            em.commit();
+
+            resp.sendRedirect(req.getContextPath() + URLConstants.WAREHOUSE_VIEW_INVENTORY);
 
         } catch (NumberFormatException e) {
             req.setAttribute("errorMessage", "Invalid data submitted. Please check type or specification.");
+            em.rollback();
             doGet(req, resp);
         } catch (Exception e) {
+            e.printStackTrace();
             req.setAttribute("errorMessage", "An error occurred while creating the request.");
+            em.rollback();
             doGet(req, resp);
         }
     }
